# ForgRequest

./: README.md  TEST_RESULTS.md  forgrequest.config  forgrequest.py  install_linux.sh  install_windows.bat  install_windows.ps1  login_head.txt  pyproject.toml
.forgrequest-update/: ready
.forgrequest-update/parts/README.md/: 00  01
.forgrequest-update/parts/src/forgrequest/cli.py/: 00  03  05
.forgrequest-update/parts/src/forgrequest/webui.py/: 00
.forgrequest-update/project/: TEST_RESULTS.md  forgrequest.py  pyproject.toml  requirements.txt
.forgrequest-update/project/config/: forgrequest.config
.forgrequest-update/project/install/linux/: README.md  install_linux.sh
.forgrequest-update/project/install/windows/: README.md  install_windows.cmd
.forgrequest-update/project/src/forgrequest/: __init__.py
.github/workflows/: apply-forgrequest-update.yml
config/: forgrequest.config
docs/: README.md
examples/: login_head.example.txt  payload.json  request.raw.example  vars.env.example
install/: README.md
install/linux/: README.md  install_linux.sh
install/windows/: README.md  install_windows.cmd  install_windows.ps1
src/forgrequest/: __init__.py  browser.py  cli.py  runtime_fixes.py  ui_theme.py  updater.py  webui.py
src/forgrequest/_source/cli/: 01  02  04  06
src/forgrequest/_source/webui/: 01  02  03
