[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgrequest"
version = "1.8.0"
description = "Advanced HTTP client for authorized request replay and manual endpoint validation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "imr" }]
dependencies = ["requests>=2.31.0", "playwright>=1.40.0,<2"]

[project.scripts]
forgrequest = "forgrequest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
